--- a/css/scratch-styles.css
+++ b/css/scratch-styles.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url(/assets/star-wars-backgrounds.jpeg);
+    background-image: url(../assets/star-wars-backgrounds.jpeg);
     color: #ffe81f;
     font-family: "Plus Jakarta Sans";
     font-size: 12pt;
